--- a/Home.html
+++ b/Home.html
@@ -112,7 +112,7 @@
 	</head>
 	<body>
 		<div id="header">
-			<img style="margin-left:3%;" src="asra_logo.gif" alt="Image not available" height="180%" width="22%" />
+			<img style="margin-left:3%;" src="Asra_logo.gif" alt="Image not available" height="180%" width="22%" />
 		</div>
 		<div id="navigation" style="font-family:font-family:Franklin Gothic Demi Cond, Times New Roman;"><br>
 				<a href="Home.html" >Home</a>
