--- a/Home.html
+++ b/Home.html
@@ -6,9 +6,9 @@
 		<style>
 			#slideshow_container
 			{
-				width:1100px;
+				width:80%;
 				overflow:hidden;
-				height:500px;
+				height:50%;
 				margin-left:auto;
 				margin-right:auto;
 			}	
